# horse_racing_project

./: .gitignore  PIM0509.DRF  README.md  app.py  bris_dict.txt  check_columns.py  connections.py  current_race_info.parquet  current_race_info.py  dev_workflow.md  gitignore  import_manager.py  jockey_trainer.py  load_analysis_data.py  past_start_comments.csv  past_starts_long_format.parquet  pedigree_analyzer.py  pyproject.toml  race1_clusters_with_context.csv  requirements.txt  ridge_e2_pace_all_races.html  run_pipeline.py  splits.csv  streamlit.py  test.py  transform_workouts.py  trip_comments_agg.csv  trip_comments_tagged.csv  trip_pipeline.py  verify_structure.py  workouts_long_format.parquet
Allways Handicapping/: Brohamer Part 1.txt
config/: config.yaml  dev_workflow.md  run_pipeline.py  settings.py
dashboards/: app.py
dashboards/assets/: dropdown.css
data/cache/: bris_spec.pkl
data/processed/: advanced_fitness_metrics.parquet  advanced_pace_analysis.parquet  beaten_lengths_trajectory.csv  class_assessment_summary.csv  class_movements_summary.csv  column_names.py  current_race_info.parquet  fitness_metrics_summary.csv  form_cycle_analysis.parquet  form_cycle_patterns.csv  (+19 more)
docs/: features.md  usage.md
models/: class_trajectory.pkl  class_trajectory_scaler.pkl  feature_names.pkl  form_cycle_classifier.pkl  form_cycle_classifier_scaler.pkl  pace_optimizer.pkl  pace_optimizer_scaler.pkl  performance_predictor.pkl  performance_predictor_scaler.pkl  workout_clustering.pkl  workout_clustering_scaler.pkl
notebooks/: data_exploration.ipynb
(+41 files in other folders)
