[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horse-racing"
version = "0.1.0"
description = "Horse Racing Analysis Pipeline"
authors = [{name = "Horse Racing Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

# Dependencies
# Derived from requirements.txt
dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.2",
    "pyarrow==14.0.2",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "plotly==5.18.0",
    "dash==2.14.2",
    "dash-bootstrap-components==1.5.0",
    "scikit-learn==1.3.2",
    "spacy==3.7.2",
    "rapidfuzz==3.5.2",
    "bokeh==3.3.2",
    "altair==5.2.0",
    "streamlit==1.29.0",
    "python-dotenv==1.0.0",
]

[project.scripts]
run-pipeline = "run_pipeline:run_complete_pipeline"
start-dashboard = "dashboards.app:app.run_server"
